--- a/desktop-owner-settings.json
+++ b/desktop-owner-settings.json
@@ -1,9 +1,9 @@
 {
+  "desktopSettings": {
+        "securedAPIDefaultPermission": "prompt",
+  },
   "applicationSettings": {
-    "rocketfin-demo-platform-provider": {
-      "urls": [
-        "https://rocketfin-demo.is.here.io/platform/api/platform.json",
-      ],
+    "https://rocketfin-demo.is.here.io/platform/api/platform.json": {
       "permissions": {
         "System": {
           "setDomainSettings": true,
@@ -13,5 +13,15 @@
         }
       }
     }
+  },
+  "default": {
+      "permissions": {
+          "System": {
+            "setDomainSettings": true,
+            "openUrlWithBrowser": {
+              "enabled": true
+            }
+          }
+      }
   }
 }
